--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,9 +58,27 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function playSound(e) {
+    const keyCode = e.keyCode;
+    const key = document.querySelector(`.key[data-key="${keyCode}"]`);
+    const audio = document.querySelector(`audio[data-key="${keyCode}"]`);
+  
+    if (audio === null) {
+      return;
+    }
+    audio.currentTime = 0;
+    audio.play();
+    key.classList.add('playing');
+  }
 
+  window.addEventListener('keydown', playSound);
+  const keys = document.querySelectorAll('.key');
+
+  keys.forEach(key => {
+    document.addEventListener('transitionend', function (e) {
+      key.classList.remove('playing');
+    });
+  });
 </script>
-
-
 </body>
 </html>
